--- a/tutorial 1/alunos/public/index.html
+++ b/tutorial 1/alunos/public/index.html
@@ -1,13 +1,67 @@
 <html>
 
 <head>
-  <title>Express</title>
+  <title>Learning Platform</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
+  
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>This portal will manage classes for students and teachers</p>
+  <header>
+    <img src="\images\student.png" alt="Student" width="400" height="400">
+  
+    <h1>Learning PLatform</h1>
+    <h2>This platform will help you manage your classes</h2>
+  </header>
+
+  <nav>
+    <p><a href="\units.html">See available unitsand students</a></p>
+    <p><a href="\grading.html">Grade a student</a></p>
+    <p><a href="https://www.dges.gov.pt/">DGES</a></p>
+    <p><a href="https://www.iade.europeia.pt/">IADE</a></p>
+    <p><a href="#bottom">Contacts</a></p>
+
+  </nav>
+
+  <main>
+    <header>
+      <h1>Our objective</h1>
+    </header>
+    <body>
+      <p>This platform will allow an easy management of <i>units</i> and <i>students</i> saving you <b>time</b> and <b>money</b>. </p> 
+      <p>Some of our functionalities:</p>
+      <ul><li>See the available subjets</li></ul>
+      <ul><li>Grade a student</li></ul>
+    </body>
+
+    <header1>
+      <h1>Description</h1>
+    </header1>
+    <body1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius dictum libero non facilisis. Nulla facilisi. Quisque ac pretium eros, ut placerat purus. Phasellus nec venenatis ante, sit amet interdum arcu. Proin ac dolor leo. Morbi ut congue turpis. Phasellus sed turpis sollicitudin, iaculis neque non, blandit nibh. Morbi non turpis eget augue efficitur porttitor at ac libero. Pellentesque gravida massa sit amet orci ornare, quis efficitur neque hendrerit. Curabitur mollis velit ac purus auctor, scelerisque fringilla risus feugiat.
+      </p>
+      <p>
+        Donec justo libero, bibendum at accumsan eu, maximus non dui. Vivamus a feugiat sapien. Quisque tincidunt, metus scelerisque tincidunt ullamcorper, urna tortor vulputate eros, nec fermentum eros erat sed sem. Cras a luctus lectus, id eleifend sapien. Mauris id posuere elit. Quisque viverra mi in dui suscipit, in accumsan justo fermentum. Pellentesque at lorem nec nulla convallis efficitur. Vestibulum commodo tellus ligula, ut convallis purus dictum et. Suspendisse pellentesque vestibulum velit, vitae egestas orci rutrum et. Donec consectetur pulvinar dui id commodo. Pellentesque pharetra leo vel dolor semper, porttitor aliquam turpis rhoncus. Ut porttitor finibus quam, vitae ullamcorper erat convallis vel. Phasellus imperdiet, ante et porta aliquam, augue ipsum iaculis felis, sit amet luctus turpis elit at est. Nam at purus felis. Duis volutpat molestie est eget vestibulum. Nam commodo rutrum metus ac blandit.
+      </p>
+      <p>
+        Mauris sollicitudin massa eu condimentum scelerisque. Suspendisse vestibulum gravida mi, quis vestibulum felis dignissim vel. Aliquam vel velit lacinia, rhoncus enim at, fringilla metus. Aenean cursus finibus hendrerit. Pellentesque consequat elementum mauris. Vestibulum non porta nibh. Vestibulum nec tellus in urna elementum blandit. Praesent elementum velit in purus iaculis, et semper magna tincidunt. Etiam efficitur aliquam ante sed varius. In non convallis velit. Morbi et sodales nulla.
+      </p>
+      <p>
+        Quisque bibendum facilisis purus. Aliquam quis orci dolor. Cras sit amet tristique ligula. Mauris tempus congue ligula, tempus malesuada neque. Sed semper tincidunt orci, ut posuere urna egestas sed. Maecenas eu tincidunt augue. Duis tristique lacus eros, et imperdiet metus interdum in. Nam a odio quis purus posuere fermentum in sed nunc. Pellentesque suscipit egestas mi, ut gravida odio semper sit amet. Nunc vel auctor ipsum.
+      </p>
+      <p>
+        Aliquam rutrum, tellus ut vestibulum suscipit, leo leo fringilla nibh, at rutrum risus magna sit amet est. Fusce blandit at ante accumsan gravida. Maecenas tellus risus, dignissim vitae hendrerit vitae, egestas quis turpis. Etiam sed nisi nisl. Nulla porta non enim in placerat. Sed molestie bibendum nibh, et cursus risus iaculis a. Nulla facilisi. Curabitur varius justo odio, nec scelerisque neque venenatis ut. Proin condimentum iaculis tristique. Nulla a ligula metus. In hac habitasse platea dictumst. Proin bibendum odio at risus luctus mollis. Praesent porttitor purus sit amet mattis aliquam.
+      </p>
+      <p>
+        Nam metus est, iaculis ac diam eget, dignissim porttitor tortor. Fusce eu volutpat enim. In hac habitasse platea dictumst. Quisque lacinia, arcu sed sodales aliquam, velit justo lobortis sapien, id maximus ligula turpis vitae eros. Vestibulum sodales eget arcu eget tincidunt. Fusce hendrerit gravida tincidunt. In tincidunt mi a nibh convallis ultrices.
+      </p>
+   </body1>
+  </main>
+  <footer>
+    <a id="bottom"></a>
+    <p>Contact us by email (<a href="admin@learning.com"> admin@learning.com </a>) or telephone (<a href="tel:2112312312"> 2112312312 </a>)</p>
+  </footer>
 </body>
 
 </html>
