--- a/tutorial 1/alunos/public/index.html
+++ b/tutorial 1/alunos/public/index.html
@@ -7,20 +7,24 @@
 </head>
 
 <body>
-  <header>
-    <img src="\images\student.png" alt="Student" width="400" height="400">
-  
+  <header id="header1" class="header1">
+    <img src="\images\student.png" alt="Student" width="400" height="400" id="alunopng">
+  <section>
     <h1>Learning PLatform</h1>
     <h2>This platform will help you manage your classes</h2>
-  </header>
-
-  <nav>
-    <p><a href="\units.html">See available unitsand students</a></p>
-    <p><a href="\grading.html">Grade a student</a></p>
-    <p><a href="https://www.dges.gov.pt/">DGES</a></p>
-    <p><a href="https://www.iade.europeia.pt/">IADE</a></p>
-    <p><a href="#bottom">Contacts</a></p>
-
+  </section>
+    
+  </header >
+ 
+  <nav id="nav1" class="nav1">
+    <a href="\units.html">See available unitsand students</a>
+    <a href="\grading.html">Grade a student</a>
+    <a href="#bottom">Contacts</a>
+  </nav>
+  
+  <nav id="nav2" class="nav2">
+    <a href="https://www.dges.gov.pt/">DGES</a>
+    <a href="https://www.iade.europeia.pt/">IADE</a>
   </nav>
 
   <main>
@@ -58,7 +62,7 @@
       </p>
    </body1>
   </main>
-  <footer>
+  <footer id="footer1" class="footer1">
     <a id="bottom"></a>
     <p>Contact us by email (<a href="admin@learning.com"> admin@learning.com </a>) or telephone (<a href="tel:2112312312"> 2112312312 </a>)</p>
   </footer>
