--- a/tutorial 1/alunos/public/units.html
+++ b/tutorial 1/alunos/public/units.html
@@ -2,47 +2,50 @@
  <head>
         <title>Learning Platform</title>
         <link rel="stylesheet" href="/stylesheets/style.css">
+        <link rel="stylesheet" href="/stylesheets/style2.css">
         
  <body>
-    <header>
-        <a href="\index.html"><img src="\images\student.png" alt="Student" width="400" height="400"></a>
-    
-      <h1>Learning Platform</h1>
-      <h2>UnitList</h2>
+    <header id=header1>
+        <a href="\index.html"><img src="\images\student.png" alt="Student" width="400" height="400" id="alunopng"></a>
+<section>
+  <h1>Learning Platform</h1>
+  <h2>UnitList</h2>
+</section>
+   
     </header>
  </body>
 
  <main>
-  <table> 
+  <table id=tabela> 
     <tr>
-      <th><b>Name</b></th>
-      <th><b>ECTS</b></th>
-      <th><b>Year</b></th>
-      <th><b>Semester</b></th>
+      <th>Name</th>
+      <th>ECTS</th>
+      <th>Year</th>
+      <th>Semester</th>
     </tr>
     <tr>
-      <th>João</th>
-      <th>6</th>
-      <th>2</th>
-      <th>1</th>
+      <td>João</td>
+      <td>6</td>
+      <td>2</td>
+      <td>1</td>
     </tr>
     <tr>
-      <th>Maria</th>
-      <th>6</th>
-      <th>2</th>
-      <th>1</th>
+      <td>Maria</td>
+      <td>6</td>
+      <td>2</td>
+      <td>1</td>
     </tr>
     <tr>
-      <th>Pedro</th>
-      <th>6</th>
-      <th>2</th>
-      <th>2</th>
+      <td>Pedro</td>
+      <td>6</td>
+      <td>2</td>
+      <td>2</td>
     </tr>
     <tr>
-      <th>Paulo</th>
-      <th>6</th>
-      <th>2</th>
-      <th>1</th>
+      <td>Paulo</td>
+      <td>6</td>
+      <td>2</td>
+      <td>1</td>
     </tr>
 
 
