--- a/projeto/public/index.html
+++ b/projeto/public/index.html
@@ -1,13 +1,33 @@
 <html>
 
 <head>
-  <title>Express</title>
+  <title>MED-SYSTEM</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
+  
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+  <header id="header1" class="header1">
+    <img src="\images\med.png" alt="MED" id="medpng">
+  <section>
+    <h1><b>MED-SYSTEM</b></h1>
+    <h2>Medical management system</h2>
+  </section>
+    
+  </header >
+ 
+  <nav id="nav1" class="nav1">
+    <a href="\alas.html" class="button">Alas & Camas</a>
+    <a href="\info.html" class="button">Fichas Médicas</a>
+    <a href="\indicador.html" class="button">Indicadores</a>
+  </nav>
+  
+
+  
+  <footer id="footer1" class="footer1">
+    <a id="bottom"></a>
+    <p>Contact us by email (<a href="med@manager.com"> med@manager.com </a>) or telephone (<a href="tel:2112312312"> 2112312312 </a>)</p>
+  </footer>
 </body>
 
 </html>
